Refactor code structure for improved readability and maintainability

--- a/technische Umsetzung/Diagramme/LLM as a judge.ipynb
+++ b/technische Umsetzung/Diagramme/LLM as a judge.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "id": "50bde174",
    "metadata": {
     "vscode": {
@@ -28,6 +28,37 @@
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘reshape2’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:tidyr’:\n",
+      "\n",
+      "    smiths\n",
+      "\n",
+      "\n",
+      "Loading required package: lpSolve\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -462,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "id": "4156594a",
    "metadata": {
     "vscode": {
@@ -554,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "id": "8d7db004",
    "metadata": {
     "vscode": {
@@ -704,6 +735,229 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cac62730",
+   "metadata": {},
+   "source": [
+    "# Violin-Plots für jedes Frage/Antwort-Paar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e950a62",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n",
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erstellt: violinplot_llm_frage1.tex\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n",
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erstellt: violinplot_llm_frage2.tex\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n",
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erstellt: violinplot_llm_frage3.tex\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n",
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erstellt: violinplot_llm_frage4.tex\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n",
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erstellt: violinplot_llm_frage5.tex\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n",
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erstellt: violinplot_llm_frage6.tex\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n",
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erstellt: violinplot_llm_frage7.tex\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n",
+      "Warning message in (function (texString, cex = 1, face = 1, engine = getOption(\"tikzDefaultEngine\"), :\n",
+      "“Attempting to calculate the width of a Unicode stringusing the pdftex engine. This may fail! See the Unicodesection of ?tikzDevice for more information.”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erstellt: violinplot_llm_frage8.tex\n",
+      "\n",
+      "Alle 8 Violin-Plots wurden erstellt.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Daten vorbereiten: Long-Format für Violin-Plots\n",
+    "df_violin <- df %>%\n",
+    "  select(Episode, Frage_Nr, \n",
+    "         Angemessenheit_Score, \n",
+    "         Kohärenz_Score, \n",
+    "         Kontextverständnis_Score,\n",
+    "         Gesamtplausibilität_Score) %>%\n",
+    "  pivot_longer(\n",
+    "    cols = c(Angemessenheit_Score, Kohärenz_Score, \n",
+    "             Kontextverständnis_Score, Gesamtplausibilität_Score),\n",
+    "    names_to = \"Item\",\n",
+    "    values_to = \"Score\"\n",
+    "  ) %>%\n",
+    "  mutate(\n",
+    "    Item = case_when(\n",
+    "      Item == \"Angemessenheit_Score\" ~ \"Angemessenheit\",\n",
+    "      Item == \"Kohärenz_Score\" ~ \"Kohärenz\",\n",
+    "      Item == \"Kontextverständnis_Score\" ~ \"Kontextverständnis\",\n",
+    "      Item == \"Gesamtplausibilität_Score\" ~ \"Gesamtplausibilität\\n(Zhang)\",\n",
+    "      TRUE ~ Item\n",
+    "    ),\n",
+    "    Item = factor(Item, levels = c(\"Angemessenheit\", \"Kohärenz\", \"Kontextverständnis\", \n",
+    "                                   \"Gesamtplausibilität\\n(Zhang)\"))\n",
+    "  )\n",
+    "\n",
+    "# LaTeX-Pfad für tikzDevice setzen\n",
+    "options(tikzLatex = \"/Library/TeX/texbin/pdflatex\")\n",
+    "\n",
+    "# Für jede Frage einen Violin-Plot erstellen\n",
+    "for (frage in 1:8) {\n",
+    "  # Daten für diese Frage filtern\n",
+    "  df_frage <- df_violin %>%\n",
+    "    filter(Frage_Nr == frage)\n",
+    "  \n",
+    "  # TikZ-Device öffnen\n",
+    "  tikz(file = paste0(\"violinplot_llm_frage\", frage, \".tex\"),\n",
+    "       width = 5.5,\n",
+    "       height = 2.8,\n",
+    "       standAlone = FALSE)\n",
+    "  \n",
+    "  # Violin-Plot erstellen\n",
+    "  p <- ggplot(df_frage, aes(x = Item, y = Score)) +\n",
+    "    geom_violin(fill = \"#377eb8\", alpha = 0.7) +\n",
+    "    labs(\n",
+    "      title = paste0(\"Frage/Antwort-Paar \", frage),\n",
+    "      x = NULL,\n",
+    "      y = \"Score\"\n",
+    "    ) +\n",
+    "    scale_y_continuous(breaks = 1:5, limits = c(0.5, 5.5)) +\n",
+    "    theme_minimal(base_size = 10) +\n",
+    "    theme(\n",
+    "      plot.title = element_text(hjust = 0.5, face = \"bold\"),\n",
+    "      axis.text.x = element_text(angle = 45, hjust = 1),\n",
+    "      panel.grid = element_blank()\n",
+    "    )\n",
+    "  \n",
+    "  print(p)\n",
+    "  dev.off()\n",
+    "  \n",
+    "  cat(\"Erstellt: violinplot_llm_frage\", frage, \".tex\\n\", sep = \"\")\n",
+    "}\n",
+    "\n",
+    "cat(\"\\nAlle 8 Violin-Plots wurden erstellt.\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "76d74900",
    "metadata": {},
    "source": [
@@ -714,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "id": "1ecc1920",
    "metadata": {
     "vscode": {
